--- a/package.json
+++ b/package.json
@@ -49,14 +49,15 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
-    "@react-three/fiber": "^8.17.14",
     "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.17.14",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.5",
     "maath": "^0.10.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.3",
+    "react-simple-typewriter": "^5.0.1",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
     "sonner": "^2.0.6",
